[project]
name = "backend"
version = "0.1.0"
description = "py_infra_link backend — FastAPI + SQLAlchemy 2.x + Pydantic v2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "pyright>=1.1.409",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ANN", "B", "C4", "SIM", "RUF"]
ignore = ["ANN401"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app"]

[tool.alembic]
script_location = "app/database/migrations"
sqlalchemy.url = "postgresql+asyncpg://postgres:postgres@localhost:5432/py_infra_link"
